<resources>
    <string name="app_name">Hutang</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dipinjamkan">Dipinjamkan</string>
    <string name="meminjam">Meminjam</string>
    <string name="formHutang">Form Hutang</string>

    <string name="tanggal_create">Tanggal Pembuatan</string>
    <string name="tanggal_deadline">Jatuh Tempo</string>
    <string name="nama">Nama</string>
    <string name="jumlah">Jumlah</string>
    <string name="kategori">Kategori</string>
    <string name="status">Status</string>

    <string name="button_add">Tambah Data</string>
    <string name="button_update">Perbaruhi Data</string>
    <string name="button_delete">Hapus Data</string>

    <string name="add_success">Data Ditambahkan</string>
    <string name="update_success">Data Diperbaruhi</string>
    <string name="delete_success">Data Dihapus</string>
    <string name="add_failed">Gagal Melakukan Penambahan</string>
    <string name="update_failed">Gagal Melakukan Pembaruhan</string>
    <string name="delete_failed">Gagal Melakukan Penghapusan</string>

    <string name="delete_confirm">Apakah anda ingin menghapus data ini?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="done">Selesai</string>

    <string name="contoh_nama">Aldi Saragih</string>
    <string name="contoh_tgl_peminjaman">Tgl Peminjaman - 24/08/2019</string>
    <string name="contoh_jatuh_tempo">Jatuh Tempo - 30/08/2019</string>
    <string name="contoh_total">Rp. 1.650.000</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio eu feugiat pretium nibh ipsum consequat nisl vel.</string>
</resources>
